[refracto] Change test-script to  'npm test'

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -15,4 +15,5 @@ jobs:
                   output: report-markdown
             - uses: marocchino/sticky-pull-request-comment@v2
               with:
+                  test-script: npm test
                   message: ${{ steps.coverage.outputs.report }}
