--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,6 +12,7 @@ jobs:
             - uses: ArtiomTr/jest-coverage-report-action@v2
               id: coverage
               with:
+                  test-script: npm test
                   output: report-markdown
             - uses: marocchino/sticky-pull-request-comment@v2
               with:
