--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,4 +1,4 @@
-name: 'coverage'
+name: "coverage"
 on:
     pull_request:
         branches:
@@ -9,12 +9,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - uses: ArtiomTr/jest-coverage-report-action@v2
-              id: coverage
-              with:
-                  test-script: npm test
-                  output: report-markdown
-            - uses: marocchino/sticky-pull-request-comment@v2
-              with:
-                  test-script: npm test
-                  message: ${{ steps.coverage.outputs.report }}
+
+            - name: Install dependencies
+              run: npm install
+
+            - name: Run test coverage
+              run: npm test
