--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,28 +1,20 @@
-name: 'coverage'
+name: "coverage"
+
 on:
-    pull_request:
-        branches:
-            - master
-            - main
+  pull_request:
+    branches:
+      - master
+      - main
+
 jobs:
-  docker:
+  coverage:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - uses: actions/checkout@v3
+      - uses: ArtiomTr/jest-coverage-report-action@v2
+        id: coverage
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v3
+          output: report-markdown
+      - uses: marocchino/sticky-pull-request-comment@v2
         with:
-          push: true
-          tags: user/app:latest
+          message: ${{ steps.coverage.outputs.report }}
