--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
-    "axios": "^1.1.3"
+    "axios": "^1.1.3",
+    "dotenv": "^16.0.3"
   }
 }
